--- a/react-shop/src/index.css
+++ b/react-shop/src/index.css
@@ -5,11 +5,22 @@ body {
   padding-top: 43px;
   padding-bottom: 30px;
   /* scroll-behavior: inherit; */
+  padding: 25px 20px;
+}
+
+html {
+  -webkit-text-size-adjust: 100%;
+}
+
+button {
+  user-select: none;
+  outline: none;
+  border: none;
 }
 
 * {
   box-sizing: border-box;
-  font-family: Nunito,Roboto,system-ui,Tahoma,sans-serif;
+  font-family: Nunito, Roboto, system-ui, Tahoma, sans-serif;
   list-style: none;
 }
 
@@ -23,7 +34,7 @@ a {
 }
 
 ::-webkit-scrollbar {
-  width: 6px;
+  width: 8px;
   height: 10px;
   background-color: #f7b718;
 }
@@ -160,6 +171,11 @@ ul {
   align-items: center;
 }
 
+.product-block-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
 b {
   margin-right: 8px;
   font-size: 16px;
@@ -212,19 +228,18 @@ b {
 }
 
 .main_content {
-  max-width: 1140px;
-  margin: 0 auto;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-row-gap: 30px;
 }
 
 .card-block {
   width: 240px;
   height: 350px;
-  margin-right: 45px;
-  margin-bottom: 60px;
+  /* margin-right: 45px; */
+  /* margin-bottom: 60px; */
   border-radius: 10px;
-  box-shadow: 5px 5px 10px #cbced1;
+  /* box-shadow: 5px 5px 10px #cbced1; */
 }
 
 .product-loader_block {
@@ -289,7 +304,7 @@ b {
 }
 
 .button-add_basket i {
-  margin-left: 4px;
+  margin-left: 6px;
   width: 24px;
   height: 24px;
   display: flex;
@@ -299,6 +314,8 @@ b {
   border-radius: 30px;
   color: #fff;
   font-style: normal;
+  font-size: 14px;
+  font-weight: 700;
 }
 
 .button-add_basket:hover i {
@@ -340,9 +357,31 @@ b {
   color: #000;
 }
 
+.content__error-info {
+  width: 500px;
+  margin: 80px auto;
+  padding: 20px 0;
+  text-align: center;
+}
+
+.content__error-info h2 {
+  font-size: 32px;
+  font-weight: 700;
+  margin: 0;
+  margin-bottom: 10px;
+  color: #000;
+}
+
+.content__error-info p {
+  margin: 0;
+  font-size: 18px;
+  color: #000;
+}
+
 /* Корзина */
 .container--cart {
-  width: 820px;
+  max-width: 820px;
+  padding: 0 10px;
 }
 
 .cart__top {
@@ -404,6 +443,7 @@ b {
 .cart__item img {
   width: 100%;
   height: 110px;
+  user-select: none;
 }
 
 .button--circle {
@@ -428,7 +468,7 @@ b {
 }
 
 .button-remove:hover {
-  background: #444444;
+  background: #282828;
   border: none;
   color: #fff;
 }
@@ -437,17 +477,35 @@ b {
   fill: #ffffff;
 }
 
+.cart__item-info {
+  margin-left: 10px;
+}
+
 .cart__item-info h3{
   margin: 0;
   font-weight: 700;
   margin-bottom: 3px;
   color: #000000;
+  user-select: none;
+}
+
+.button--circle {
+  background: #fff;
+  outline: none;
+  user-select: none;
+}
+
+:disabled {
+  opacity: 0.4;
+  border-color: #787878;
+  pointer-events: none;
 }
 
 .cart__item-info p {
   margin: 0;
   font-size: 16px;
   color: rgba(141, 141, 141, 1);
+  user-select: none;
 }
 
 .cart__item-count {
@@ -459,6 +517,7 @@ b {
   margin: 0 12px;
   font-size: 22px;
   font-weight: 700;
+  user-select: none;
 }
 
 .svg-icon-minus {
@@ -476,6 +535,10 @@ b {
   color: #fff;
 }
 
+.cart__item-count-minus:active {
+  user-select: none;
+}
+
 .cart__item-count-minus:hover .svg-icon-minus {
   fill: #fff;
 }
@@ -483,6 +546,10 @@ b {
 .cart__item-count-plus:hover {
   background: #FE5F1E;
   color: #fff;
+}
+
+.cart__item-count-plus:active {
+  user-select: none;
 }
 
 .cart__item-count-plus:hover .svg-icon-plus {
@@ -493,6 +560,7 @@ b {
   font-size: 22px;
   font-weight: 700;
   color: #000;
+  user-select: none;
 }
 
 .cart__bottom-details {
@@ -515,6 +583,7 @@ b {
 .button-cart span {
   display: flex;
   align-items: center;
+  user-select: none;
 }
 
 .button--add {
@@ -540,6 +609,7 @@ b {
   font-size: 16px;
   font-weight: 400;
   color: #CACACA;
+  user-select: none;
 }
 
 .pay-btn {
@@ -553,7 +623,7 @@ b {
 }
 
 .pay-btn:hover {
-  background: #3F3F3F;
+  background: #fe5f1e;
 }
 
 .pay-btn:active {
@@ -565,11 +635,13 @@ b {
   font-size: 22px;
   font-weight: 400;
   color: #000;
+  user-select: none;
 }
 
 .cart__bottom-details b {
   font-size: 22px;
   font-weight: 700;
+  user-select: none;
 }
 
 .cart__bottom-details .price {
@@ -578,6 +650,7 @@ b {
 
 .content__items {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
@@ -631,4 +704,540 @@ b {
 
 .cart--empty .button--black:hover {
   background: #282828ec;
+}
+
+/*  */
+.container__button-to-home {
+  width: 100px;
+}
+
+.button-go_home {
+  padding: 5px 25px;
+  border-radius: 30px;
+  user-select: none;
+  outline: none;
+  border: 1px solid #FE5F1E;
+  background: none;
+  color: #FE5F1E;
+  font-size: 14px;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.button-go_home:hover {
+  background: #FE5F1E;
+  color: #fff;
+}
+
+.button-go_home:active {
+  opacity: 0.5;
+}
+
+.main-description {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.main__description {
+  max-width: 1000px;
+  margin: 0 auto;
+  margin-top: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.main__description p {
+  width: 300px;
+  text-align: center;
+}
+
+.main__description h2 {
+  text-align: center;
+}
+
+.main__description h4 {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 700;
+  margin: 0;
+  text-align: end;
+}
+
+
+@media (max-width: 1350px) {
+  .search_root__hF5z- {
+    display: none;
+  }
+}
+
+@media (max-width: 1100px) {
+  .navigation {
+    flex-direction: column;
+  }
+
+  .categories {
+    margin-bottom: 20px;
+  }
+  
+  .main_content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 30px;
+  }
+}
+
+@media (max-width: 900px) {
+  .main_content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 30px;
+  }
+  
+  body {
+    padding: 15px 10px;
+  }
+
+  .button-cart .cart-price {
+    display: none;
+  }
+
+  .cart-delimiter {
+    display: none;
+  }
+}
+
+@media (max-width: 850px) {
+  .cart__item {
+    display: grid;
+    grid-template-columns: 115px 300px 215px 40px;
+    grid-template-rows: 110px;
+  }
+  
+  .cart__item-info {
+    grid-column: 2;
+    grid-row: 1;
+  }
+
+  .cart__item-count {
+    grid-row: 1;
+    grid-column: 2;
+    margin-left: auto;
+    margin-top: auto;
+    margin-right: 80px;
+  }
+
+  .cart__item-price {
+    grid-column: 3;
+    grid-row: 1;
+  }
+
+  .cart__item-remove {
+    grid-column: 4;
+    grid-row: 1;
+  }
+}
+
+@media (max-width: 700px) {
+  .categories ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    row-gap: 10px;
+  }
+
+  .categories li {
+    padding: 12px 25px;
+    font-size: 14px;
+  }
+
+  .header {
+    padding: 15px 10px;
+  }
+
+  .button-cart {
+    padding: 10px 20px;
+  }
+}
+
+@media (max-width: 680px) {
+  .cart__item {
+    display: grid;
+    grid-template-columns: 115px 300px 150px;
+    grid-template-rows: 110px;
+  }
+  
+  .cart__item-info {
+    grid-column: 2;
+    grid-row: 1;
+  }
+
+  .cart__item-count {
+    grid-row: 1;
+    grid-column: 2;
+    margin-left: auto;
+    margin-top: auto;
+    margin-right: 80px;
+  }
+
+  .cart__item-price {
+    grid-column: 3;
+    grid-row: 1;
+  }
+
+  .cart__item-remove {
+    grid-column: 3;
+    grid-row: 1;
+    margin-left: auto;
+  }
+}
+
+@media (max-width: 600px) {
+  .categories ul {
+  max-width: 400px;
+  }
+
+  /* CART */
+  .cart__item {
+    display: grid;
+    grid-template-columns: 115px 270px 120px;
+    grid-template-rows: 110px;
+  }
+    
+  .cart__item-info {
+    grid-column: 2;
+    grid-row: 1;
+  }
+  
+  .cart__item-count {
+    grid-row: 1;
+    grid-column: 2;
+    margin-left: auto;
+    margin-top: auto;
+    margin-right: 50px;
+  }
+  
+  .cart__item-price {
+    grid-column: 3;
+    grid-row: 1;
+  }
+  
+  .cart__item-remove {
+    grid-column: 3;
+    grid-row: 1;
+    margin-left: auto;
+  }
+
+  .main__description h4 {
+    font-size: 18px;
+    text-align: center;
+  }
+
+  .main__description p {
+    font-size: 16px;
+    font-weight: 300;
+    margin-top: 0;
+  }
+  
+  .main__description h2 {
+    font-size: 18px;
+    margin-bottom: 5px;
+  }
+}
+
+@media (max-width: 550px) {
+  /* CART */
+
+  .cart__item {
+    display: grid;
+    grid-template-columns: 115px 250px 120px;
+    grid-template-rows: 110px;
+  }
+      
+  .cart__item-info {
+    grid-column: 2;
+    grid-row: 1;
+  }
+    
+  .cart__item-count {
+    grid-row: 1;
+    grid-column: 2;
+    margin-left: auto;
+    margin-top: auto;
+    margin-right: auto;
+  }
+    
+  .cart__item-price {
+    grid-column: 3;
+    grid-row: 1;
+  }
+    
+  .cart__item-remove {
+    grid-column: 3;
+    grid-row: 1;
+    margin-left: auto;
+  }
+
+  .cart__bottom-details span {
+    font-size: 18px;
+  }
+
+  .cart__bottom-details b {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 520px) {
+  .header-logo {
+    align-items: center;
+  }
+
+  .header-logo__name p {
+    display: none;
+  }
+
+  .main_content {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-row-gap: 30px;
+  }
+}
+
+@media (max-width: 510px) {
+  /* CART */
+  .cart__item {
+    display: grid;
+    grid-template-columns: 115px 210px 90px;
+    grid-template-rows: 110px;
+  }
+    
+  .cart__item-info {
+    grid-column: 2;
+    grid-row: 1;
+  }
+  
+  .cart__item-info h3 {
+    font-size: 18px;
+  }
+
+  .cart__item-info p {
+    font-size: 14px;
+  }
+
+  .cart__item-count {
+    grid-row: 1;
+    grid-column: 2;
+    margin-left: auto;
+    margin-top: auto;
+    margin-right: 50px;
+  }
+  
+  .cart__item-price b {
+    font-size: 18px;
+  }
+
+  .cart__item-price {
+    grid-column: 3;
+    grid-row: 1;
+    margin-top: 50px;
+  }
+  
+  .cart__item-remove {
+    grid-column: 3;
+    grid-row: 1;
+    margin-right: auto;
+    margin-bottom: 10px;
+  }
+
+  .button-cart {
+    padding: 8px 15px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .cart__bottom-details {
+    justify-content: center;
+    row-gap: 10px;
+    flex-wrap: wrap;
+  }
+
+  .cart__bottom-buttons {
+    width: 200px;
+    margin: 0 auto;
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+    row-gap: 10px;
+  }
+}
+
+@media (max-width: 450px) {
+  body {
+    padding: 8px 10px;
+  }
+
+  /* CART */
+  .cart__top {
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+  }
+
+  .cart__item {
+    display: grid;
+    grid-template-columns: 115px 210px 90px;
+    grid-template-rows: 110px;
+  }
+    
+  .cart__item-info {
+    grid-column: 2;
+    grid-row: 1;
+  }
+  
+  .cart__item-info h3 {
+    font-size: 18px;
+  }
+
+  .cart__item-info p {
+    font-size: 14px;
+  }
+
+  .cart__item-count {
+    grid-row: 1;
+    grid-column: 2;
+    margin-left: auto;
+    margin-top: auto;
+    margin-right: 50px;
+  }
+  
+  .cart__item-price b {
+    font-size: 18px;
+  }
+
+  .cart__item-price {
+    grid-column: 3;
+    grid-row: 1;
+    margin-top: 50px;
+  }
+  
+  .cart__item-remove {
+    grid-column: 3;
+    grid-row: 1;
+    margin-right: auto;
+    margin-bottom: 10px;
+  }
+}
+
+@media(max-width: 440px) {
+  /* CART */
+  .cart__item {
+    display: grid;
+    grid-template-columns: 115px 200px;
+    grid-template-rows: 110px;
+  }
+    
+  .cart__item-info {
+    grid-column: 2;
+    grid-row: 1;
+  }
+  
+  .cart__item-info h3 {
+    font-size: 16px;
+  }
+
+  .cart__item-info p {
+    font-size: 14px;
+  }
+
+  .cart__item-count {
+    grid-row: 1;
+    grid-column: 2;
+    margin-top: auto;
+    margin-right: 100px;
+  }
+
+  .cart__item-count b {
+    font-size: 18px;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
+  .button--circle {
+    width: 28px;
+    height: 28px;
+  } 
+  
+  .cart__item-price b {
+    font-size: 16px;
+  }
+
+  .cart__item-price {
+    grid-column: 2;
+    grid-row: 1;
+    margin-left: auto;
+    margin-right: 5px;
+  }
+  
+  .cart__item-remove {
+    grid-column: 3;
+    grid-row: 1;
+    margin-bottom: 0;
+  }
+}
+
+@media(max-width: 370px) {
+  .cart__item {
+    display: grid;
+    grid-template-columns: 110px 190px;
+    grid-template-rows: 110px;
+  }
+    
+  .cart__item-info {
+    grid-column: 2;
+    grid-row: 1;
+  }
+  
+  .cart__item-info h3 {
+    font-size: 16px;
+  }
+
+  .cart__item-info p {
+    font-size: 14px;
+  }
+
+  .cart__item-count {
+    grid-row: 1;
+    grid-column: 2;
+    margin-top: auto;
+    margin-right: 110px;
+  }
+
+  .cart__item-count b {
+    font-size: 18px;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
+  .button--circle {
+    width: 28px;
+    height: 28px;
+  } 
+  
+  .cart__item-price b {
+    font-size: 16px;
+  }
+
+  .cart__item-price {
+    grid-column: 2;
+    grid-row: 1;
+    margin-left: auto;
+    margin-right: 15px;
+  }
+  
+  .cart__item-remove {
+    grid-column: 3;
+    grid-row: 1;
+    margin-top: 20px;
+    margin-bottom: 0;
+  }
 }
